--- a/index.html
+++ b/index.html
@@ -10,13 +10,31 @@
 </head>
 <body>
     <header>
-
+        <div>
+            <img class="logo" src="images/davante.png" alt="Logo Davante">
+        </div>
+        <div>
+            <h1>Juego de Memoria</h1>
+        </div>
     </header>
+
     <main>
-
+        <img class="instrucciones" src="images/instrucciones.png" alt="Instrucciones">
+        <div>
+            <p class="boton">Modo Fácil</p>
+        </div>
+        <div>
+            <p class="boton">Modo Medio</p>
+        </div>
+        <div>
+            <p class="boton">Modo Difícil</p>
+        </div>
     </main>
-    <footer>
 
+    <footer>
+        <p>Autores: 1ºDAW (Medac Arena)</p>
+        <p>Alejandro Caballero Luque</p>
+        <p>José Ramón Rejano Ruge</p>
     </footer>
 
     <script src="js/index.js"></script>
