--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <div>
             <img class="logo" src="images/davante.png" alt="Logo Davante">
+            <img class="logo2" src="images/medac.png" alt="Logo Medac">
         </div>
         <div>
             <h1>Juego de Memoria</h1>
