--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <img class="logo2" src="images/medac.png" alt="Logo Medac">
         </div>
         <div>
-            <h1>Juego de Memoria</h1>
+            <h1>Juego de Memoria &#127924;</h1>
         </div>
     </header>
 
@@ -37,7 +37,7 @@
         </div>
 
         <div>
-            <button>Modo Fácil</b>
+            <a href="contenido/modo_facil.html">Modo Fácil</a>
         </div>
         <div>
             <button>Modo Medio</button>
