--- a/contenido/modo_dificil.html
+++ b/contenido/modo_dificil.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Alejandro Caballero Luque">
     <meta name="author" content="José Ramón Rejano Ruge">
-    <title>Modo Medio</title>
+    <title>Modo Difícil</title>
     <link rel="stylesheet" href="../css/modo_nivel.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
             <img class="logo2" src="../images/medac.png" alt="Logo Medac">
         </div>
         <div>
-            <h1>Modo Medio (6x6)</h1>
+            <h1>Modo Medio (8x8)</h1>
         </div>
     </header>
 
