--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             <a href="contenido/modo_facil.html">Modo Fácil</a>
         </div>
         <div>
-            <button>Modo Medio</button>
+            <a href="contenido/modo_medio.html">Modo Medio</a>
         </div>
         <div>
-            <button>Modo Difícil</button>
+            <a href="contenido/modo_dificil.html">Modo Difícil</a>
         </div>
     </main>
 
