--- a/contenido/modo_facil.html
+++ b/contenido/modo_facil.html
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-        <div id="game-board" class="game-board"></div>
+        <div id="juego" class="juego"></div>
         <div class="boton-regresar-container">
             <a href="../index.html" class="boton-regresar" id="botonRegresar">&#8592;</a>
             <div class="texto" id="textoRegresar">Regresar al Menú Principal</div>
@@ -34,5 +34,6 @@
     </footer>
 
     <script src="../js/boton_regresar.js"></script>
+    <script src="../js/tablero.js"></script>
 </body>
 </html>
