historial fondo y boton

--- a/contenido/historial.html
+++ b/contenido/historial.html
@@ -20,7 +20,10 @@
     </header>
 
     <main>
-
+        <div class="boton-regresar-container">
+            <a href="../index.html" class="boton-regresar" id="botonRegresar">&#8592;</a>
+            <div class="texto" id="textoRegresar">Regresar al Menú Principal</div>
+        </div>
     </main>
 
     <footer>
@@ -28,5 +31,7 @@
         <p>Alejandro Caballero Luque</p>
         <p>José Ramón Rejano Ruge</p>
     </footer>
+
+    <script src="../js/boton_regresar.js"></script>
 </body>
 </html>
