--- a/contenido/modo_dificil.html
+++ b/contenido/modo_dificil.html
@@ -15,11 +15,12 @@
             <img class="logo2" src="../images/medac.png" alt="Logo Medac">
         </div>
         <div>
-            <h1>Modo Medio (8x8)</h1>
+            <h1>Modo Difícil (8x8)</h1>
         </div>
     </header>
 
     <main>
+        <div id="juego" class="juego_dificil"></div>
         <div class="boton-regresar-container">
             <a href="../index.html" class="boton-regresar" id="botonRegresar">&#8592;</a>
             <div class="texto" id="textoRegresar">Regresar al Menú Principal</div>
@@ -33,5 +34,6 @@
     </footer>
 
     <script src="../js/boton_regresar.js"></script>
+    <script src="../js/tablero.js"></script>
 </body>
 </html>
