--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <div>
-            <img class="logo" src="images/davante.png" alt="Logo Davante">
-            <img class="logo2" src="images/medac.png" alt="Logo Medac">
+            <img class="logo" src="assets/images/davante.png" alt="Logo Davante">
+            <img class="logo2" src="assets/images/medac.png" alt="Logo Medac">
         </div>
         <div>
             <h1>Juego de Memoria &#127924;</h1>
@@ -22,7 +22,7 @@
     <main>
         <a class="historial" href="contenido/historial.html">Historial de Partidas</a>
 
-        <img class="instrucciones" id="instrucciones" src="images/instrucciones.png" alt="Instrucciones">
+        <img class="instrucciones" id="instrucciones" src="assets/images/instrucciones.png" alt="Instrucciones">
 
         <!-- Popup oculto por defecto -->
         <div id="popup" class="popup">
