--- a/contenido/historial.html
+++ b/contenido/historial.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <div>
-            <img class="logo" src="../images/davante.png" alt="Logo Davante">
-            <img class="logo2" src="../images/medac.png" alt="Logo Medac">
+            <img class="logo" src="../assets/images/davante.png" alt="Logo Davante">
+            <img class="logo2" src="../assets/images/medac.png" alt="Logo Medac">
         </div>
         <div>
             <h1>Historial de Partidas</h1>
