--- a/contenido/modo_facil.html
+++ b/contenido/modo_facil.html
@@ -28,8 +28,10 @@
 
         <div id="juego" class="juego_facil" style="display:none;"></div>
 
-        <div id="infoJuego" style="display:none;">
+        <div id="infoJuego">
             <p id="temporizador"> Tiempo: 0 segundos</p>
+            <p id="jugador1">Jugador 1: 0</p>
+            <p id="jugador2">Jugador 2: 0</p>
             <p id="jugadores">Jugador 1: 0 || Jugador 2: 0</p>
             <p id="turnoActual">Jugador 1</p>
         </div>
