--- a/contenido/modo_dificil.html
+++ b/contenido/modo_dificil.html
@@ -29,7 +29,8 @@
         <div id="juego" class="juego_dificil" style="display:none;"></div>
 
         <div id="infoJuego">
-            <p id="temporizador"> Tiempo: 0 segundos</p>
+            <p id="temporizador2"> Tiempo:</p>
+            <p id="temporizador">0 segundos</p>
             <p id="jugador1">Jugador 1: 0</p>
             <p id="jugador2">Jugador 2: 0</p>
             <p id="jugadores">Jugador 1: 0 || Jugador 2: 0</p>
