--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div id="popup" class="popup">
             <p><strong>Instrucciones del Juego:</strong></p>
             <p>Para empezar a jugar seleciona un modo de juego.</p>
+            <p>Elige si quieres jugar solo o con un amigo</p>
             <p>El juego consiste en levantar cartas y encontrar cartas que sean iguales.</p>
             <p>¡Intenta encontrar todas las parejas en el menor tiempo posible!</p>
             <p>Cada modo aumentará el número de cartas.</p>
