--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
             <p>Para empezar a jugar seleciona un modo de juego.</p>
             <p>Elige si quieres jugar solo o con un amigo</p>
             <p>El juego consiste en levantar cartas y encontrar cartas que sean iguales.</p>
+            <br>
+            <p><b>Modo 1 Jugador</b></p>
             <p>¡Intenta encontrar todas las parejas en el menor tiempo posible!</p>
+            <br>
+            <p><b>Modo 2 Jugadores</b></p>
+            <p>Intentad encontrar más parejas que vuestro rival, ¡quien consiga más parejas gana!</p>
+            <p>Si fallas al levantar dos cartas el turno cambiará al siguiente jugador</p>
+            <br>
             <p>Cada modo aumentará el número de cartas.</p>
             <p>- Modo Fácil: 4x4</p>
             <p>- Modo Medio: 6x6</p>
