--- a/contenido/modo_facil.html
+++ b/contenido/modo_facil.html
@@ -28,6 +28,8 @@
 
         <div id="juego" class="juego_facil" style="display:none;"></div>
 
+        <button id="reiniciar">Reiniciar Partida</button>
+
         <div id="infoJuego">
             <p id="temporizador2"> Tiempo:</p>
             <p id="temporizador">0 segundos</p>
@@ -49,6 +51,7 @@
     </footer>
 
     <script src="../js/boton_regresar.js"></script>
+    <script src="../js/reiniciar.js"></script>
     <script src="../js/tablero.js"></script>
 </body>
 </html>
