victoria modo facil

--- a/contenido/modo_facil.html
+++ b/contenido/modo_facil.html
@@ -39,6 +39,13 @@
             <p id="turnoActual">Jugador 1</p>
         </div>
 
+        <div id="pantalla"></div>
+
+        <div id="terminarPartida">
+            <p id="resultado">¡Juego terminado! Tiempo total: 0 segundos</p>
+            <button id="continuar">Volver a Jugar</button>
+        </div>
+
         <div class="boton-regresar-container">
             <a href="../index.html" class="boton-regresar" id="botonRegresar">&#8592;</a>
             <div class="texto" id="textoRegresar">Regresar al Menú Principal</div>
