--- a/contenido/historial.html
+++ b/contenido/historial.html
@@ -20,6 +20,10 @@
     </header>
 
     <main>
+        <div class="contenedor">
+            <ol id="lista"></ol>
+        </div>
+
         <div class="boton-regresar-container">
             <a href="../index.html" class="boton-regresar" id="botonRegresar">&#8592;</a>
             <div class="texto" id="textoRegresar">Regresar al Menú Principal</div>
@@ -33,5 +37,6 @@
     </footer>
 
     <script src="../js/boton_regresar.js"></script>
+    <script src="../js/historial.js"></script>
 </body>
 </html>
